modified background color

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 #navbar {
   background-color: #1f2833;
+  padding-top: 1%;
 }
 
 #navbarElements {
@@ -40,4 +41,10 @@
 #cardBody {
   display: flex;
   justify-content: space-evenly;
+}
+
+#main {
+  background-color: #1f2833;
+  padding-top: 2%;
+  padding-bottom: 2%;
 }
